--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.20.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "jwt-decode": "^3.1.2",
     "mongoose": "^6.3.4"
   }
 }
