--- a/client/package.json
+++ b/client/package.json
@@ -5,10 +5,12 @@
   "dependencies": {
     "@formkit/auto-animate": "^1.0.0-beta.3",
     "@material-ui/core": "^4.12.4",
+    "@react-oauth/google": "^0.2.8",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "dotenv": "^16.0.3",
     "moment": "^2.29.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
